@startuml
class org.ull.dap.app.views.cli.ViewCLI {
- AppController controller
- List<INotification> notifications
- List<String> usersAvailable
- List<String> usersSelected
- String currentUser
- void menuUsers()
- void selectUsers(Scanner,int)
- void processUserSelection(int)
+ void showSubscribers()
+ void showUsersAvailable()
+ List<String> getUsersSelected()
+ List<INotification> getNotifications()
+ void windowSelectCryptos()
- void processCryptoSelection(String)
- void selectCryptos(Scanner,int)
- void processCryptoSelection(int)
+ void showListCryptos()
+ String getUserComboBoxString()
}
interface org.ull.dap.app.views.IView {
~ List<String> getUsersSelected()
~ List<INotification> getNotifications()
~ void windowSelectCryptos()
~ String getUserComboBoxString()
}
class org.ull.dap.app.views.desktop.NotificationDesktop {
- boolean changeColor
- JPanel notificationPanel
- JPanel titlePanel
- JPanel footerPanel
- JPanel cryptoPanel
- JLabel lblTitle
- JScrollPane scrollPaneCrypto
+ {static} String ROUTE_IMAGE_LOGO
- void initializeUI()
- JPanel getNotificationPanel()
- JPanel getTitlePanel()
- JLabel getLblTitle()
+ ImageIcon resizeIcon(ImageIcon,int,int)
- JPanel getFooterPanel()
- JLabel getLblFooter()
- JScrollPane getScrollPaneCrypto()
- JPanel getCryptoPanel()
+ void showNotification(List<String>,Map<String,String>)
+ {static} String extractNameCrypto(String)
}
interface org.ull.dap.app.views.INotification {
~ void showNotification(List<String>,Map<String,String>)
}
class org.ull.dap.app.views.cli.NotificationCLI {
+ void showNotification(List<String>,Map<String,String>)
}
class org.ull.dap.app.views.desktop.DashboardDesktop {
- XYSeries bitcoinSeries
- XYSeries ethereumSeries
- DefaultPieDataset datasetPieChart
- DefaultCategoryDataset datasetBarChart
- void initializeUI()
- void customizeChartAxis(JFreeChart)
- void customizeChartRenderer(JFreeChart,Color)
+ void updateData(List<Asset>)
}
class org.ull.dap.app.views.desktop.ViewDesktop {
+ {static} String ROUTE_IMAGE_LOGO
- JLabel lblTitle
- JButton btnStart
- JComboBox<String> comboBoxUsersSelected
- JList<String> usersList
- JPanel contentPane
- AppController controller
- List<String> usersSelected
- List<String> usersAvailable
- List<INotification> notifications
- Map<String,JButton> addButtonMap
- Map<String,JButton> deleteButtonMap
- DashboardDesktop dashboardDesktop
- void initializeUI()
- JLabel getLblLogo()
- JLabel getLblTitle()
- ImageIcon resizeImage(ImageIcon,int,int)
+ JButton getBtnLogin()
+ JList<String> getListUsers()
+ JPanel getPanelLogin()
+ void windowSelectCryptos()
- void fillComboBoxUsers()
- JPanel getPanelSelectCrypto()
- JScrollPane displayCryptos()
- JPanel createItemCrypto(String,String)
- JLabel createImageCrypto(String)
- JLabel getLblUser()
+ JComboBox<String> getComboBoxUsersSelected()
+ String getUserComboBoxString()
+ List<String> getUsersSelected()
+ List<INotification> getNotifications()
+ void setUsersSelected(List<String>)
+ void setDashboardDesktop(DashboardDesktop)
+ DashboardDesktop getDashboardDesktop()
- JButton getBtnStart()
+ void enableButtons(String,boolean)
- void eventButtons()
- void activateButtons(String)
}


org.ull.dap.app.views.IView <|.. org.ull.dap.app.views.cli.ViewCLI
org.ull.dap.app.views.INotification <|.. org.ull.dap.app.views.desktop.NotificationDesktop
org.ull.dap.app.views.desktop.JFrame <|-- org.ull.dap.app.views.desktop.NotificationDesktop
org.ull.dap.app.views.INotification <|.. org.ull.dap.app.views.cli.NotificationCLI
org.ull.dap.app.views.desktop.JFrame <|-- org.ull.dap.app.views.desktop.DashboardDesktop
org.ull.dap.app.views.IView <|.. org.ull.dap.app.views.desktop.ViewDesktop
org.ull.dap.app.views.desktop.JFrame <|-- org.ull.dap.app.views.desktop.ViewDesktop
@enduml